implemented rendering of words

--- a/app/styles/_typography.scss
+++ b/app/styles/_typography.scss
@@ -1,5 +1,22 @@
+$font : 'PT Mono';
+$green : #458b00;
+$grey : #a9a9a9;
+$red : #cd0000;
+
 body, h1, h2, h3, h4, h5, h6{
-    font-family: 'PT Mono';
+    font-family: $font;
+}
+
+.text_green {
+    color: $green;
+}
+
+.text_grey {
+    color: $grey;
+}
+
+.text_red {
+    color: $red;
 }
 
 .text_size-1 {
