implemented cache popularity function

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -9,26 +9,21 @@ $icon-font-path: "/bower_components/sass-bootstrap/fonts/";
     display: block;
     width: 64px;
     height: 64px;
-    float: left;
-    margin: 0 20px;
+    margin: 0 auto;
+    text-indent: -99999px;
     @include svg-bg('cloud-10');
 }
 
 header {
-    border-bottom: 1px solid #999;
     margin-bottom: 20px;
+}
 
-    h1 {
-        position: relative;
-        margin: 0;
-        height: 64px;
-        line-height: 64px;
-    }
+.word-cloud{
+    text-align: center;
+    padding: 15px;
 }
 
 .word {
-    font-size: 200%;
-
     &:hover {
         text-decoration: none;
     }
