implemented word popularity calculation

--- a/app/scripts/templates/word.ejs
+++ b/app/scripts/templates/word.ejs
@@ -1,1 +1,1 @@
-<a href="#<%= id %>" class="js-word word text_<%= fontColor %>"><%= label %></a>
+<a href="#<%= id %>" class="js-word word text_<%= fontColor %> text_size-<%= fontSize %>"><%= label %></a>
