updated README, generated dist

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -33,6 +33,12 @@ header {
     }
 }
 
+.error {
+    .icon {
+        top: 4px;
+    }
+}
+
 /* Responsive: Portrait tablets and up */
 @media screen and (min-width: 768px) {
 
