--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -2,44 +2,8 @@ $icon-font-path: "/bower_components/sass-bootstrap/fonts/";
 
 @import 'sass-bootstrap/lib/bootstrap';
 
+@import '_variables.scss';
 @import '_mixins.scss';
 @import '_typography.scss';
-
-.logo {
-    display: block;
-    width: 64px;
-    height: 64px;
-    margin: 0 auto;
-    text-indent: -99999px;
-    @include svg-bg('cloud-10');
-}
-
-header {
-    margin-bottom: 20px;
-}
-
-.word-cloud{
-    text-align: center;
-    padding: 15px;
-}
-
-.word {
-    display: inline-block;
-    margin: 5px;
-    letter-spacing: -2px;
-
-    &:hover {
-        color: inherit;
-    }
-}
-
-.error {
-    .icon {
-        top: 4px;
-    }
-}
-
-/* Responsive: Portrait tablets and up */
-@media screen and (min-width: 768px) {
-
-}
+@import '_base.scss';
+@import '_modules.scss';
