--- a/app/scripts/templates/word-info.ejs
+++ b/app/scripts/templates/word-info.ejs
@@ -1,17 +1,17 @@
 <div class="modal-dialog">
     <div class="modal-content">
-      <div class="modal-header text_<%= fontColor %>">
+      <div class="modal-header">
         <button type="button" class="close js-word-info-close">
             <span >&times;</span>
             <span class="sr-only">Close</span>
         </button>
-        <h4 class="modal-titles"><%= label %></h4>
+        <h4 class="modal-title text_<%= fontColor %>"><%= label %></h4>
       </div>
       <div class="modal-body">
         <ul class="list-group">
             <li class="list-group-item list-group-item-heading">
                 <span class="badge bg_black"><%= volume %></span>
-                <strong>total mentions</strong>
+                <span class="text_bold">total mentions</span>
             </li>
             <% _.each(sentiment, function(value, type){ %>
             <li class="list-group-item">
