--- a/app/scripts/templates/topic-info.ejs
+++ b/app/scripts/templates/topic-info.ejs
@@ -1,7 +1,7 @@
 <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <button type="button" class="close js-word-info-close">
+        <button type="button" class="close js-topic-info-close">
             <span >&times;</span>
             <span class="sr-only">Close</span>
         </button>
