added IE8 support, fixed Scrolling to top when going back to home on mobile

--- a/app/styles/_mixins.scss
+++ b/app/styles/_mixins.scss
@@ -1,5 +1,8 @@
 @mixin svg-bg($name) {
-  background: transparent url(../images/#{$name}.png) 0 0 no-repeat; // IE8 & below
+  .no-svg & {
+  	background: transparent url(../images/#{$name}.png) 0 0 no-repeat; // IE8 & below
+  	background-size: auto auto;
+  }
   background: transparent url(../images/#{$name}.svg) 0 0 no-repeat;
   background-size: 100%;
 }
