fixed topic info stats badge background-color on IE9

--- a/app/scripts/templates/topic-info.ejs
+++ b/app/scripts/templates/topic-info.ejs
@@ -15,7 +15,7 @@
             </li>
             <% _.each(sentiment, function(value, type){ %>
             <li class="list-group-item">
-                <span class="badge bg_<%= bgColors[type] %>"><%= value %></span>
+                <span class="badge clear_filter bg_<%= bgColors[type] %>"><%= value %></span>
                 <%= type %>
             </li>
             <% }); %>
