generate url segment for topic

--- a/app/scripts/templates/topic.ejs
+++ b/app/scripts/templates/topic.ejs
@@ -1,1 +1,1 @@
-<a href="#/<%= id %>" class="topic text_<%= fontColor %> text_size-<%= fontSize %>"><%= label %></a>
+<a href="#/<%= urlSegment %>" class="topic text_<%= fontColor %> text_size-<%= fontSize %>"><%= label %></a>
