--- a/app/styles/_modules.scss
+++ b/app/styles/_modules.scss
@@ -14,8 +14,9 @@
 
 .topic {
     display: inline-block;
-    margin: 5px;
+    margin: 10px;
     letter-spacing: -2px;
+    word-spacing: -0.3em;
 
     &:hover {
         color: inherit;
