--- a/app/styles/_modules.scss
+++ b/app/styles/_modules.scss
@@ -1,3 +1,4 @@
+// modules
 .logo {
     display: block;
     width: 64px;
@@ -29,10 +30,7 @@
     }
 }
 
-.clear_filter {
-    filter: none !important;
-}
-
+// background color
 .bg_black {
     background-color: $black;
 }
@@ -47,4 +45,9 @@
 
 .bg_red {
     background-color: $red;
+}
+
+// utils
+.clear_filter {
+    filter: none !important;
 }
