fixed route to last opened topic, added apple touch icons

--- a/app/scripts/templates/topic.ejs
+++ b/app/scripts/templates/topic.ejs
@@ -1,1 +1,1 @@
-<a href="#/<%= urlSegment %>" class="topic text_<%= fontColor %> text_size-<%= fontSize %>"><%= label %></a>
+<a href="#" data-topic-urlsegment="<%= urlSegment %>" class="js-topic topic text_<%= fontColor %> text_size-<%= fontSize %>"><%= label %></a>
